--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,25 @@
     <groupId>com.zanox.vertx.mods</groupId>
     <artifactId>mod-kinesis</artifactId>
     <packaging>jar</packaging>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2</version>
     <name>Project - mod-kinesis</name>
-    <url>http://maven.apache.org</url>
+    <description>Amazon Kinesis module for Vert.x framework</description>
+    <url>https://github.com/zanox/mod-kinesis</url>
+
+    <licenses>
+        <license>
+            <name>Apache License 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
+    <scm>
+        <connection>scm:git:git@github.com:zanox/mod-kinesis.git</connection>
+        <developerConnection>scm:git:git@github.com:zanox/mod-kinesis.git</developerConnection>
+        <url>git@github.com:zanox/mod-kinesis.git</url>
+        <tag>HEAD</tag>
+    </scm>
 
     <developers>
         <developer>
@@ -178,8 +194,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.compiler.plugin.version}</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
             <plugin>
