--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.zanox.vertx.mods</groupId>
     <artifactId>mod-kinesis</artifactId>
     <packaging>jar</packaging>
-    <version>1.4.5-SNAPSHOT</version>
+    <version>1.4.6-SNAPSHOT</version>
     <name>Project - mod-kinesis</name>
     <description>Amazon Kinesis module for Vert.x framework</description>
     <url>https://github.com/zanox/mod-kinesis</url>
@@ -22,7 +22,7 @@
         <connection>scm:git:git@github.com:zanox/mod-kinesis.git</connection>
         <developerConnection>scm:git:git@github.com:zanox/mod-kinesis.git</developerConnection>
         <url>git@github.com:zanox/mod-kinesis.git</url>
-        <tag>mod-kinesis-1.4.5</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <developers>
@@ -397,6 +397,9 @@
                         <goals>
                             <goal>sign</goal>
                         </goals>
+                        <configuration>
+                            <skip>${skipSigning}</skip>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
