--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.zanox.vertx.mods</groupId>
     <artifactId>mod-kinesis</artifactId>
     <packaging>jar</packaging>
-    <version>1.4.8</version>
+    <version>1.4.11-SNAPSHOT</version>
     <name>Project - mod-kinesis</name>
     <description>Amazon Kinesis module for Vert.x framework</description>
     <url>https://github.com/zanox/mod-kinesis</url>
@@ -29,7 +29,7 @@
         <developer>
             <name>Sascha Möllering</name>
             <email>sascha.moellering@zanox.com</email>
-            <organization>ZANOX AG</organization>
+            <organization>zanox AG</organization>
             <url>http://www.zanox.com</url>
         </developer>
     </developers>
