--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.zanox.vertx.mods</groupId>
     <artifactId>mod-kinesis</artifactId>
     <packaging>jar</packaging>
-    <version>1.4.21-SNAPSHOT</version>
+    <version>1.4.21</version>
     <name>Project - mod-kinesis</name>
     <description>Amazon Kinesis module for Vert.x framework</description>
     <url>https://github.com/zanox/mod-kinesis</url>
@@ -22,7 +22,7 @@
         <connection>scm:git:git@github.com:zanox/mod-kinesis.git</connection>
         <developerConnection>scm:git:git@github.com:zanox/mod-kinesis.git</developerConnection>
         <url>git@github.com:zanox/mod-kinesis.git</url>
-        <tag>HEAD</tag>
+        <tag>mod-kinesis-1.4.21</tag>
     </scm>
 
     <developers>
@@ -65,7 +65,7 @@
         <vertx.version>2.1.2</vertx.version>
         <version.vertx.testtools>2.0.3-final</version.vertx.testtools>
         <version.junit>4.11</version.junit>
-        <version.aws>1.8.9</version.aws>
+        <version.aws>1.10.12</version.aws>
         <version.mockito>1.9.5</version.mockito>
 
         <!--Plugin versions-->
